# MK_RTOS

./: .gitignore  CMakeLists.txt  MKRTOS.axf  MKRTOS.build_log.htm  MKRTOS.htm  MKRTOS.lnp  MKRTOS.map  MKRTOS.uvguix.MagicKingC  MKRTOS.uvoptx  MKRTOS.uvprojx  MKRTOS_Target 1.dep  README.md  cpu.lst  data_type.d  gitignore  main.crf  startup_armcm3.lst  system.crf  system_armcm3.d
RTE/Device/ARMCM3/: system_ARMCM3.c
RTE/_Target_1/: RTE_Components.h
app/: main.c  mkrtos_config.h
cmake/: include.cmake  options.cmake
kernel/code/include/: idle.h  mkrtos.h  mktask.h  mktype.h  priority.h  scheduler.h  system.h  systick.h
kernel/code/src/: idle.c  mktask.c  mktype.c  priority.c  scheduler.c  system.c  systick.c  tickspoke.c
kernel/code/sys/inc/: delay.h  idle.h  mkrtos.h  mkrtos_config.h  mkrtos_inc.h  mktype.h  priority.h  switch.h  system.h  tick_spoke.h  time_stamp.h
kernel/code/sys/src/: delay.c  idle.c  mktype.c  priority.c  switch.c  system.c  tick_spoke.c  time_stamp.c
kernel/code/tools/include/: mkprintk.h  mkstr.h
kernel/code/tools/list/: list.c
kernel/code/tools/src/: mkprintk.c  mkstr.c
kernel/code/tools/str/: str.c  str.h
kernel/data_type/: data_type.c  data_type.h
kernel/include/: delay.h  idle.h  mkrtos.h  mkrtos_config.h  mkrtos_inc.h  priority.h  switch.h  system.h  time_stamp.h
kernel/libcpu/m3/: cpu.asm  cpu.s  cpu_o.asm  mcu_cm3.s  sys_tick.c  systick.c  systick.h
kernel/libcpu/qemu/: cm3.c  cm3.h  cm3_s.s  int_vector.c  mcu_cm3.s  mcu_mc3.asm  mcu_mc3.s  systick.c  vector.c
kernel/list/: list.c  list.h
kernel/source/: delay.c  idle.c  priority.c  switch.c  system.c  time_stamp.c
mk-rtos/kernel/inc/: mkdef.h  mkidle.h  mkrtos.h  mktask.h  systick.h
mk-rtos/kernel/src/: def.c  idle.c  priority.c  scheduler.c  system.c  task.c  tickspoke.c
mk-rtos/libcpu/m3/: systick.c
mk-rtos/libcpu/qemu/: cm3.h  systick.c  vector.c
mk-rtos/tools/inc/: mkprintk.h  mkstr.h
mk-rtos/tools/src/: mkstr.c
object/: MKRTOS.axf  MKRTOS.build_log.htm  MKRTOS.htm  MKRTOS.map  MKRTOS.uvguix.MagicKingC  MKRTOS.uvguix.user1  MKRTOS.uvoptx  MKRTOS.uvprojx  cpu.d  cpu.lst  cpu_o.lst  data_type.crf  main.crf  main.d  startup_armcm3.d  startup_armcm3.lst  system.d  system_armcm3.crf
object/RTE/Device/ARMCM3/: startup_ARMCM3.s  system_ARMCM3.c
object/RTE/_Target_1/: RTE_Components.h
object/object/: MKRTOS.axf  MKRTOS.build_log.htm  MKRTOS.hex  MKRTOS.htm  MKRTOS.lnp  MKRTOS_Target 1.dep  cpu.d  cpu_1.d  cpu_o.d  data_type.crf  data_type.d  delay.crf  delay.d  idle.crf  idle.d  list.crf  list.d  main.crf  main.d  mk_task.d  mkstr.d  mktask.d  mktype.d  priority.d  scheduler.d  startup_armcm3.d  str.d  switch.crf  switch.d  sys_tick.d  system.crf  system.d  system_armcm3.crf  system_armcm3.d  systick.crf  systick.d  systick_1.d  time_stamp.crf  time_stamp.d
tools/: gdb-arm-none-eabi_7.10-1ubuntu3+9_amd64.deb
tools/vscode _config/: launch.json  tasks.json
